--- a/.github/workflows/hexo_deploy.yml
+++ b/.github/workflows/hexo_deploy.yml
@@ -9,7 +9,7 @@ jobs:
 
     steps:
       - name: Checkout source
-        uses: actions/checkout@v1
+        uses: actions/checkout@v3
         with:
           ref: hexo
       - name: Configration hexo repo
@@ -27,9 +27,9 @@ jobs:
           git submodule init
           git submodule update
       - name: Use Node.js ${{ matrix.node_version }}
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
-          version: ${{ matrix.node_version }}
+          node-version: '14'
       - name: Setup Hexo
         run: |
          npm install hexo-cli -g
